# peik

./: .gitignore  README.md  pyproject.toml  requirements.txt
cpp/: CMakeLists.txt  eik1.cc  util.hh
peik/: __init__.py  config.py
scripts/: 1_simple_eikonal.ipynb  2_cpp_eik1.ipynb  flat.ipynb  uniform_sphere.ipynb
